Mejoras en el chat. Ahora debería estar oculto y mostrarse al seleccionar un stream.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,3 +63,14 @@ li:hover {
 .footer {
    clear: both;
 }
+
+#chat{
+  visibility: hidden;
+}
+
+#chatArea{
+  overflow-y:auto; 
+  height:100px;
+  text-align: left;
+}
+
