--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,10 +16,10 @@
   <body>
   	<h1><%= header %></h1>
 
-  	<%= include local-cam %>
+  	<!-- <%= include local-cam %> -->
 
   	<%= include remote-streams %>
 
-  	<p class="footer"><%= footer %></p>
+  	<!-- <p class="footer"><%= footer %></p> -->
   </body>
 </html>
