--- a/views/remote-streams.ejs
+++ b/views/remote-streams.ejs
@@ -27,8 +27,8 @@
             </p>
         </div>
 
-        <p><input value='' ng-model="rtc.chatTextBox" ng-keydown="$event.keyCode == 13 && rtc.sendMsg(rtc.remoteStreams[rtc.activeStream.id)" />
-        <button ng-click="rtc.sendMsg(rtc.activeStream.id)" > Enviar </button>
+        <p><input value='' ng-model="rtc.chatTextBox" ng-keydown="$event.keyCode == 13 && rtc.sendMsg(rtc.activeStream)" />
+        <button ng-click="rtc.sendMsg(rtc.activeStream)" > Enviar </button>
         </p>
     </div>
 </div>
